# tiny-model-ground-truth

./: .codecov.yml  .commitlintrc.yml  .gitignore  .gitmessage  .pmat-metrics.toml  .tool-versions  CHANGELOG.md  CITATION.cff  CLAIMS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  commitlint.config.js  coverage.toml  dvc.yaml  flake.nix  mutants.toml  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: parity.yml
.pmat/: context.db  project.toml
.pmat-work/: ledger.jsonl
.pmat-work/PMAT-001/falsification/: receipt-2026-02-14T17-28-18.811994739+00-00.json  receipt-2026-02-14T17-30-57.254295684+00-00.json  receipt-2026-02-14T17-31-11.220795719+00-00.json
benches/: parity_bench.py
benchmarks/: parity_bench.py
ci/: parity.yml  setup.sh
docs/: API.md  BENCHMARKS.md  MODEL_CARD.md  PRE_REGISTRATION.md  fix-prompt-gh277-gh278.md
docs/adr/: 0001-greedy-decoding-only.md  0002-fixed-prompt-set.md  0003-oracle-source.md  0004-int4-int8-quantization.md
docs/roadmaps/: roadmap.yaml
models/: README.md
oracle-ops/convert/: smollm-135m.json
oracle-ops/finetune/: smollm-135m.json
oracle-ops/merge/: smollm-135m.json
oracle-ops/prune/: smollm-135m.json
oracle-ops/quantize/: smollm-135m.json
oracle/gpt2-124m/: arithmetic.json  code.json  completion.json  greeting.json
oracle/qwen2-0.5b/: arithmetic.json  code.json  completion.json  greeting.json
oracle/smollm-135m/: arithmetic.json  code.json  completion.json  greeting.json
prompts/: arithmetic.txt  code.txt
scripts/: gen_oracle.py  oracle_convert.py  oracle_finetune.py  oracle_merge.py  oracle_prune.py  oracle_quantize.py  parity_check.py
tests/: conftest.py  helpers.py  test_canary.py  test_canary.ruchy  test_format_roundtrip.ruchy  test_gpu_oracle.py  test_helpers.py  test_helpers_mock.py  test_hypothesis.py  test_inspect.py  test_llamacpp_parity.py  test_makefile_smoke.py  test_operations_parity.py  test_oracle_drift.py  test_oracle_ops.py  test_parity_check.py  test_perplexity.py  test_perplexity.ruchy  test_property.ruchy  test_quant_drift.py  test_quant_drift.ruchy  test_roundtrip.py  test_runtime_parity.ruchy  test_safetensors_parity.py  test_selftest.py  test_tensors.py  test_token_parity.py  test_token_parity.ruchy  test_validate.py
