[project]
name = "tiny-model-ground-truth"
version = "0.1.0"
description = "Oracle generator for model parity ground truth"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.45.0",
    "torch>=2.2.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.22.0",
    "accelerate>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
