[project]
name = "tiny-model-ground-truth"
version = "0.1.0"
description = "Popperian falsification for model format parity in the Sovereign AI Stack"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.45.0",
    "torch>=2.2.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.22.0",
    "accelerate>=0.28.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.100.0",
]
# Operations oracle: Python reference implementations for the 5 most common
# HuggingFace model operations. Each produces JSON oracle output that future
# apr versions can be compared against.
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a5",
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.100.0",
]
gpu = [
    "kernels>=0.5.0",
]
ops = [
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
    "trl>=0.12.0",
    "optimum>=1.23.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "datasets>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_apr: test requires apr CLI in PATH",
    "requires_models: test requires converted model files",
    "canary: Claim 1 - Int8 exact text match vs oracle",
    "token_parity: Claims 2,3 - Int4/Int8 token mismatch bounds",
    "quant_drift: Claim 4 - Int8 <= Int4 + 1 drift ordering",
    "roundtrip: Claim 5 - APR->GGUF->APR lossless roundtrip",
    "perplexity: Claims 7,8 - PPL bounds and drift",
    "inspect: Claim 9 - metadata consistency",
    "validate: Claim 10 - model integrity",
    "tensors: Claim 11 - tensor structure",
    "selftest: Claim 13 - pipeline self-test",
    "property_based: hypothesis property-based tests",
    "safetensors_parity: safetensors Python vs apr CLI parity",
]
timeout = 60

[tool.ty.rules]
# HuggingFace transformers/torch use heavily dynamic typing that ty can't resolve.
# Suppress false positives from third-party libraries while keeping useful checks.
unresolved-attribute = "ignore"
call-non-callable = "ignore"
invalid-assignment = "ignore"
unresolved-import = "ignore"
invalid-argument-type = "ignore"
unknown-argument = "ignore"
invalid-return-type = "ignore"
not-iterable = "ignore"
unsupported-operator = "ignore"
not-subscriptable = "ignore"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PIE", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
include = ["tests/helpers.py", "scripts/parity_check.py"]
fail_under = 95
